# noemirtil

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
flaskr/: __init__.py  auth.py  blog.py
flaskr/static/: style.css
flaskr/templates/: base.html
flaskr/templates/blog/: create.html  index.html
portfolio/: __init__.py  auth.py  blog.py  db.py
portfolio/static/: style.css
portfolio/templates/: base.html
portfolio/templates/auth/: login.html  register.html
portfolio/templates/blog/: index.html  update.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
