[project]
name = "flaskr"
version = "1.0.0"
description = "A basic blog app from the Flask oficial tutorial."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

# Some extra configuration, which is not required but makes running tests with coverage less verbose
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]